# mvmctl

./: .coverage  .gitignore  .prepare-rebase.sh  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  IMPROVEMENTS.md  LICENSE  PKGBUILD  README.md  Taskfile.yml  bump-version.py  custom-images.md  environment_setup.sh  fcm-requirements.md  fenv.yaml  fix-issues.md  go.mod  go.sum  mvm.spec  mvmctl.yaml  phase-1-status.md  phase-2-status.md  phase-3-status.md  phase-4-status.md  phase-5-status.md  phase-6-status.md  phase-status.md  pyproject.toml  python-cli-entry.md  python-cli-phase-1.md  python-cli-phase-3.md  python-cli-phase-4.md  python-cli-phase-6.md  python-cli.md  rc-env.yaml  reconsile-phases.md  (+2 more)
.feature-dev/: 01-requirements.md  state.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml  system-tests.yml
.opencode/: opencode.json
.opencode/agent/: architect.md  brainstormer.md  code-consolidator.md  doc-tracer.md  engineer.md  golang-patterns.md  orchestrator.md  porter.md  qa-engineer.md  refactor-engineer.md  refactor-planner.md
assets/: build-kernel.sh  config.env  defaults.yaml  download-assets.sh  images.yaml  kernel.yaml
benchmarks/: boot_time.py  results.json
cmd/mvm/: main.go  provision.go
docs/: API.md  ASSETS_CONFIGURATIONS.md  BACKENDS.md  CUSTOM_KERNEL.md  DEPENDENCIES.md  ENV_SPEC_REFERENCE.md  IMPROVEMENTS_ARCHIVE.md  KERNEL.md  PORTING_TO_GOLANG.md  PROJECT_ARCHITECTURE.md  RC_QA.md  REFERENCES.md  RELEASE.md  RESOURCE_MANAGEMENTS.md  RUNTIME.md  STANDARDS.md  TROUBLESHOOTING.md  constants_extraction.md  coverage_baseline.md  custom-kernel.md  dead_codes.md  mvm.1  system-test-architecture.md
docs/SubAgent/: iptables_analysis.md
firecracker-manager/: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  phase-1-status.md  phase-2-status.md  phase-4-status.md  phase-6-status.md  pyproject.toml
firecracker-manager/.github/workflows/: ci.yml  release.yml
firecracker-manager/assets/: defaults.yaml
firecracker-manager/docs/: API.md  PHASE4_ARCHITECTURE.md  RELEASE.md  custom-kernel.md
firecracker-manager/src/fcm/: constants.py  exceptions.py  main.py
firecracker-manager/src/fcm/api/: AGENTS.md  __init__.py  assets.py  config.py  host.py  keys.py  network.py  vm_config.py  vms.py
firecracker-manager/src/fcm/assets/: defaults.yaml  images.yaml
firecracker-manager/src/fcm/cli/: AGENTS.md  __init__.py  asset.py  config.py  configure.py  host.py  image.py  kernel.py  key.py  network.py  vm.py
firecracker-manager/src/fcm/core/: AGENTS.md  binary_manager.py  cli_state.py  cloud_init.py  config.py  config_gen.py  config_state.py  firecracker.py  host.py  host_privilege.py  host_setup.py  host_state.py  image.py  kernel.py  key_manager.py  logs.py  metadata.py  network.py  network_manager.py  ssh.py  user_config.py  vm_lifecycle.py  vm_manager.py
firecracker-manager/src/fcm/models/: __init__.py  image.py  vm.py  vm_config_file.py
firecracker-manager/src/fcm/utils/: __init__.py  audit.py  console.py  fs.py  http.py  process.py  validation.py
firecracker-manager/src/mvmctl/: __init__.py  exceptions.py  main.py
firecracker-manager/src/mvmctl/api/: AGENTS.md  assets.py  config.py  host.py  keys.py  network.py  vm_config.py  vms.py
firecracker-manager/src/mvmctl/assets/: __init__.py  images.yaml
firecracker-manager/src/mvmctl/cli/: AGENTS.md  asset.py  config.py  configure.py  host.py  vm.py
firecracker-manager/src/mvmctl/core/: binary_manager.py  cloud_init.py  config.py  config_gen.py  config_state.py  host.py  host_privilege.py  host_state.py  image.py  kernel.py  key_manager.py  metadata.py  network.py  network_manager.py  ssh.py  user_config.py  vm_lifecycle.py  vm_manager.py
firecracker-manager/src/mvmctl/models/: image.py  vm.py
firecracker-manager/src/mvmctl/utils/: audit.py  fs.py  process.py
firecracker-manager/tests/: AGENTS.md  conftest.py
firecracker-manager/tests/integration/: test_cli_smoke.py  test_host_init_reset.py  test_network_workflow.py  test_vm_lifecycle.py
firecracker-manager/tests/unit/: conftest.py  test_api_assets.py  test_api_network.py  test_api_vms.py  test_audit.py  test_binary_manager.py  test_cli_asset.py  test_cli_config.py  test_cli_configure.py  test_cli_host.py  test_cli_image.py  test_cli_kernel.py  test_cli_key.py  test_cli_network.py  test_cli_state.py  test_cli_vm.py  test_cloud_init.py  test_config.py  test_config_gen.py  test_config_state.py  test_constants.py  test_firecracker.py  test_firecracker_client.py  test_fs.py  test_host.py  test_host_privileges.py  test_http.py  test_image.py  test_kernel.py  test_kernel_new.py  test_key_manager.py  test_logs.py  test_main.py  test_metadata.py  test_network.py  test_network_manager.py  test_phase5.py  test_process.py  test_security.py  test_ssh.py  (+6 more)
legacy/: CLAUDE.md  PYTHON_CLI_CURRENT.md  PYTHON_CLI_REQUIREMENTS.md  custom-images.md  environment_setup.sh  phase-1-status.md  phase-3-status.md  phase-4-status.md  phase-5-status.md  phase-6-status.md  phase-status.md  python-cli-entry.md  python-cli-phase-1.md  python-cli-phase-2.md  python-cli-phase-3.md  python-cli-phase-4.md  python-cli-phase-5.md  python-cli-phase-6.md  python-cli-phase-7.md  ssh.sh
multi-vm/: README.md  cleanup-all.sh  cleanup.sh  config.env  create-vm.sh  delete-vm.sh  get-kernel.sh  list-vms.sh  logs-vm.sh  setup-bridge.sh  setup.sh  start-vm.sh  stop-vm.sh
packaging/: .SRCINFO  .gitignore  LICENSE  PKGBUILD  builder.yaml  mvmctl.spec  mvmctl.yaml
scripts/: build-packages.sh  build.sh  build_services.py  bump-version.py  check-comments.sh  check_skip_ratio_verify.py  common.py  dead_code_scanner.py  fresh_env.py  post-release.py  profile_test_memory.py  run-system-tests.py  run_tests.py  setup-test-environment.py  verify-docs.sh
single-vm/: README.md  cleanup.sh  config.env  create-vm.sh  delete-vm.sh  firecracker.json  logs-vm.sh  network.sh  resume-vm.sh  setup.sh  start-vm.sh  stop-vm.sh
stubs/: psutil.pyi
tests/: AGENTS.md  conftest.py
(+1751 files in other folders)
