[project]
name = "mvmctl"
version = "0.1.0"
description = "A CLI for managing microVMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "typer-slim>=0.12,<0.16",  # Lightweight version without Rich/Markdown deps
    "rich>=13,<15",  # Keep for console output, but not via typer
    "pyyaml>=6,<7",
    "jinja2>=3.1,<4",
]


[project.scripts]
mvm = "mvmctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvmctl"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*", "tests"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "arg-type", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/mvmctl --cov-branch --cov-report=term-missing --cov-fail-under=80"
markers = [
    "real_mvm_group_check: test uses real _require_mvm_group_membership (not mocked)",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "pip-audit>=2.8",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "pytest-mock>=3,<4",
    "pytest-timeout>=0.5",
    "pytest-xdist>=3,<4",
    "ruff>=0.15,<1",
    "types-PyYAML>=6.0,<7",
    "wheel>=0.46.2",
]
build = [
    "pyinstaller>=6,<7",
    "nuitka>=2.1,<3",
    "zstandard>=0.22,<1",
]
