[project]
name = "mvmctl"
version = "0.1.0"
description = "A CLI for managing microVMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "typer-slim>=0.12,<0.16",  # Lightweight version without Rich/Markdown deps
    "rich>=13,<15",  # Keep for console output, but not via typer
    "rich-click>=1.9.7",  # Rich-formatted CLI help output
    "pyyaml>=6,<7",
    "jinja2>=3.1,<4",
    "zstandard>=0.21.0",
    "passlib>=1.7.4",
    "bcrypt>=3.2,<5",
]


[project.scripts]
mvm = "mvmctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvmctl"]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "TID251"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["stubs"]

[[tool.mypy.overrides]]
module = ["tests.*", "tests"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = ["guestfs"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["no-untyped-def", "type-arg"]

[[tool.mypy.overrides]]
module = ["rich_click"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -n auto
    --dist loadscope
    --cov=src/mvmctl
    --cov-branch
    --cov-report=term-missing
    --cov-fail-under=80
    --ignore=tests/system
    """
markers = [
    "real_mvm_group_check: test uses real _require_mvm_group_membership (not mocked)",
    "system: real hardware integration test — requires KVM, mvm group",
    "shared_vm: uses module-scoped VM fixture for stateful tests",
    "independent_vm: creates independent VM per test",
    "slow: test takes >30 seconds",
    "requires_kvm: requires /dev/kvm access",
    "requires_network: requires network setup",
    "serial: test creates real VMs — must run without parallelism",
    "domain_bin: system test for binary management domain",
    "domain_kernel: system test for kernel management domain",
    "domain_image: system test for image management domain",
    "domain_network: (unused — network tests are serial due to iptables)",
    "domain_key: system test for SSH key management domain",
    "domain_config: system test for config management domain",
    "domain_host: (unused — host tests that create VMs are serial domain_vm)",
    "domain_init: system test for init wizard domain",
    "domain_volume: system test for volume management domain",
    "domain_vm: system test for VM lifecycle domain",
    "domain_invariant: system test for invariant enforcement",
    "domain_outcome: system test for business outcome verification",
    "domain_consistency: system test for CLI consistency across command groups",
    "domain_cross_resource: system test for cross-resource consistency",
    "domain_state: system test for VM state machine edge cases",
    "domain_dependency: system test for resource dependency ordering",
    "domain_negative: system test for failure mode handling",
    "domain_concurrency: system test for concurrent operations",
    "domain_leak: system test for resource leak and invariant enforcement",
    "domain_destroy: system test for destroy/cleanup edge cases",
    "domain_exhaustion: system test for resource exhaustion edge cases",
    "domain_json: system test for JSON output field consistency",
    "domain_image_edges: system test for image management edge cases",
    "domain_binary_edges: system test for binary management edge cases",
    "domain_network_edges: system test for network management edge cases",
    "domain_cache_edges: system test for cache/prune edge cases",
    "domain_ssh_edges: system test for SSH key edge cases",
    "domain_config_edges: system test for configuration edge cases",
    "domain_console_logs: system test for console and logs edge cases",
    "domain_logs: system test for VM log viewing operations",
    "domain_workflow: system test for multi-resource integration workflows",
    "domain_cache: system test for cache management domain",
    "domain_cli: system test for CLI edge cases domain",
    "domain_console: system test for console management domain",
    "domain_ssh: system test for SSH access domain",
    "domain_firecracker: system test for Firecracker-specific integration",
    "domain_usability: system test for CLI usability (help, errors, flags)",
    "domain_cp: system test for file copy (cp) domain",
    "kernel_build: system test for kernel build from source (excluded from default run)",
    "host_reset: system test for host reset/clean with sudo (excluded from default run)",
]
filterwarnings = [
    "ignore::ResourceWarning:coverage.collector",
    # ResourceWarning for unclosed sqlite3 connections — connections are
    # properly closed via Database.connect() context manager, but test
    # code and mock teardown sometimes leave references that trigger this
    # warning during GC. The connection WILL be closed by sqlite3 on
    # garbage collection, so these are harmless.
    "ignore:unclosed database:ResourceWarning",
]

[tool.coverage.run]
omit = [
    "*/services/loopmount/process.py",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "pyright>=1.1.409",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "pytest-dependency>=0.6.0",
    "pytest-mock>=3,<4",
    "pytest-timeout>=0.5",
    "pytest-xdist>=3,<4",
    "ruff>=0.15,<1",
    "types-PyYAML>=6.0,<7",
    "wheel>=0.46.2",
]
build = [
    "pyinstaller>=6,<7",
    "nuitka>=4,<5",
    "zstandard>=0.22,<1",
]
