[project]
name = "firecracker-manager"
version = "0.1.0"
description = "A CLI for managing Firecracker microVMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<0.16",
    "rich>=13,<15",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19,<2",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
    "types-PyYAML>=6.0,<7",
    "pyinstaller>=6,<7",
]

[project.scripts]
fcm = "fcm.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcm"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
    "types-PyYAML>=6.0,<7",
    "pyinstaller>=6,<7",
]
